# Desafio2

./: CMakeLists.txt  README.md  fecha.cpp  fecha.h  gestorarchivos.cpp  gestorarchivos.h  grupos.cpp  grupos.h  jugadores.cpp  jugadores.h  main.cpp  medidor.cpp  medidor.h  partido.cpp  partido.h  selecciones.cpp  selecciones.h  selecciones_mundial.csv  statspartido.cpp  statspartido.h  statsteam.cpp  statsteam.h  torneo.cpp  torneo.h
